--- a/index.html
+++ b/index.html
@@ -160,7 +160,18 @@ d3.select('#submit')
 
 //reset button
 d3.select('#reset')
-  .on("click", ResetAll)
+  .on("click", function(){
+    myData=ppl;
+
+    d3.select('#date1')
+      .property("value","2015-01-01");
+
+    d3.select('#date2')
+      .property("value","2018-12-31");
+
+    updating();
+
+  })
 
 var ppl=[];
 var myData=ppl
