Added time input
Time input in lefthand bar - but it is NOT CONNECTED to filtering.

Only added for presentation tonight. Will fix by end of due date.

--- a/index.html
+++ b/index.html
@@ -129,12 +129,20 @@
 
       <div class="calendar">
   <div align ="left">
-    From: <br>
+    Date From: <br>
     <input type="date" name="date1" id="date1"  value="2015-01-01" min="2015-01-01" max="2018-12-31" /><br />
     <br>
-    To: <br>
+    Date To: <br>
     <input type="date" name="date1" id="date2" value="2018-12-31" min="2015-01-01" max="2018-12-31" /><br />
     <br>
+    Time From: <br>
+    <input type="time" name="time1" id="time1"  value="00:00" /><br />
+    <br>
+    Time To: <br>
+    <input type="time" name="time1" id="time2" value="23:59"  /><br />
+    <br>
+
+
     <input id='submit' type="button" onclick="render(true)" value="Submit" />
   <!--Reset Button -->
     <input id="reset" type='button' onclick="render(true)" value='Reset All' />
