--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
 
   /* map placement; auto-scale base on window size */
   #map{
-    width: 600px;
+    width: 550px;
     height: 550px;
     margin: 10;
-    padding: 0;
     border: solid 1px gray;
     float:left;
   }
@@ -64,10 +63,10 @@
     pointer-events: none;
   }
   .agebars {
-    transform: translate(335px,365px);
+    transform: translate(255px,365px);
   }
   .weekdaybars {
-    transform: translate(20px,365px)
+    transform: translate(-43px,365px)
   }
   h2,h4{
     text-align: center;
@@ -87,6 +86,7 @@
       padding-top: 20px;
       background-color: #f1f1f1;
       height: 130%;
+      width: 180px;
     }
 
 
@@ -121,36 +121,34 @@
     </header>
 
 
-
-
 <div class="container-fluid text-center">
   <div class="row content">
     <div class="col-sm-2 sidenav">
 
       <div class="calendar">
-  <div align ="left">
-    Date From: <br>
-    <input type="date" name="date1" id="date1"  value="2015-01-01" min="2015-01-01" max="2018-12-31" /><br />
-    <br>
-    Date To: <br>
-    <input type="date" name="date1" id="date2" value="2018-12-31" min="2015-01-01" max="2018-12-31" /><br />
-    <br>
-    Time From: <br>
-    <input type="time" name="time1" id="time1"  value="00:00" /><br />
-    <br>
-    Time To: <br>
-    <input type="time" name="time1" id="time2" value="23:59"  /><br />
-    <br>
+        <div align ="left">
+          Date From: <br>
+          <input type="date" name="date1" id="date1"  value="2015-01-01" min="2015-01-01" max="2018-12-31" /><br />
+          <br>
+          Date To: <br>
+          <input type="date" name="date1" id="date2" value="2018-12-31" min="2015-01-01" max="2018-12-31" /><br />
+          <br>
+          Time From: <br>
+          <input type="time" name="time1" id="time1"  value="00:00" /><br />
+          <br>
+          Time To: <br>
+          <input type="time" name="time1" id="time2" value="23:59"  /><br />
+          <br>
 
 
-    <input id='submit' type="button" onclick="render(true)" value="Submit" />
-  <!--Reset Button -->
-    <input id="reset" type='button' onclick="render(true)" value='Reset All' />
-  </div>
-
-</div>
-
+          <input id='submit' type="button" onclick="render(true)" value="Submit" />
+        <!--Reset Button -->
+          <input id="reset" type='button' onclick="render(true)" value='Reset All' />
+        </div>
+      </div>
     </div>
+    <!-- class calendar break -->
+
     <div class="col-sm-5 text-left">
       <div align="center">
 				<div style="width:100%; overflow:hidden;">
@@ -164,7 +162,7 @@
     <div class="col-sm-5 ">
 
       <div id="div2">
-        <svg id="svg2" width="950" height="575">
+        <svg id="svg2" width="750" height="575">
 
           <g class='agebars' id='agechart0' />
           <g class='agebars' id='agechart1' />
@@ -178,14 +176,14 @@
           <g class='agebars' id='agechart9' />
           <g class='agebars' id='agechart10' />
 
-          <text id="bar_txt" x="-500" y="50" transform="rotate(-90)">Number of Deaths</text>
+          <text id="bar_txt" x="-500" y="10" transform="rotate(-90)">Number of Deaths</text>
 
-          <text x="480" y="340">AGE GROUP DISTRIBUTION</text>
+          <text x="380" y="340">AGE GROUP DISTRIBUTION</text>
 
           <g id='agegroup_txt' transform="translate(100,100)"/>
 
           <!-- Days of the Week SVG's -->
-          <text x="150" y="340">Days of the Week</text>
+          <text x="50" y="340">Days of the Week</text>
 
           <g class= 'weekdaybars' id='MON' />
           <g class= 'weekdaybars' id='TUES' />
@@ -196,7 +194,7 @@
           <g class= 'weekdaybars' id='SUN' />
         </svg>
       </div>
-      </div>
+    </div>
 
       <script src="bars.js"></script>
       <script src="week_bars.js"></script>
