barchart on index

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ h2,h4{
 
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFrhgjCQZ2PFopQA00L-yh8aknCBN2v74">  </script>
 <script src="//d3js.org/d3.v3.min.js"></script>
+<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 
 </head>
 <body>
@@ -129,6 +130,7 @@ To :   <input type="date" name="date1" id="date2" value="2018-12-31" min="2015-0
 <script src="bars.js"></script>
 <script src="week_bars.js"></script>
 <script src="UpdatingCharts.js"></script>
+<script src="dateBars.js"></script>
 
 <script>
 
@@ -285,6 +287,9 @@ var map = new google.maps.Map(d3.select("#map").node(), {
     AgeChart();
     Weekday_Chart();
     });
+
+
+
 
 </script>
   </body>
