dateBars.js added to script src

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
       <script src="bars.js"></script>
       <script src="week_bars.js"></script>
       <script src="UpdatingCharts.js"></script>
+      <script src="dateBars.js"></script>
 
       <script>
       //Maggie: testing out filtering data by date
