added because js source was unsecure

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFrhgjCQZ2PFopQA00L-yh8aknCBN2v74">  </script>
   <script src="//d3js.org/d3.v3.min.js"></script>
-  <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+  <!-- <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script> -->
 
   <style>
 
@@ -239,6 +239,7 @@ left: 0;
       <script src="week_bars.js"></script>
       <script src="UpdatingCharts.js"></script>
       <script src="dateBars.js"></script>
+      <script src="tool_tip.js"></script>
 
       <script>
       //Maggie: testing out filtering data by date
