--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
   <style>
 
   /* map placement; auto-scale base on window size */
+  #legend {
+    border: solid 1px none;
+    width: 600px;
+    height: 40px;
+  }
+
   #map{
     width: 550px;
     height: 550px;
@@ -191,8 +197,20 @@
     <div class="col-sm-5 text-left">
       <div align="center">
 				<div style="width:100%; overflow:hidden;">
+          <svg height="1"></svg>
 					<div id="map">
 					</div>
+
+          <svg id="legend">
+            <!-- Legend -->
+            <text x="5" y="30" style="font-size: 18px;">Legend:</text>
+
+            <g id="i_deaths"/>
+              <text x="120" y="30" style="font-size: 14px;">Interstate Deaths</text>
+            <g id="non_i_deaths"/>
+              <text x="310" y="30" style="font-size: 14px;">Non-Interstate Deaths</text>
+          </svg>
+
 				</div>
 			</div>
 
@@ -232,6 +250,8 @@
           <g class= 'weekdaybars' id='SAT' />
           <g class= 'weekdaybars' id='SUN' />
 
+
+
         </svg>
       </div>
     </div>
@@ -241,6 +261,7 @@
       <script src="UpdatingCharts.js"></script>
       <script src="dateBars.js"></script>
       <script src="tool_tip.js"></script>
+      <script src="legend.js"></script>
 
       <script>
       //Maggie: testing out filtering data by date
