--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
 
 <footer class="container-fluid text-center">
   <p>IUPUI H517 - Project 2 - Developed by Margaret Betz, Pari Brown, Shuennhau Chang, and Eric Graves</p>
-  <p><a href="#" style="color:white">Documentation     </a> &#8226; <a href="#" style="color:white">Video Tutorial </a> &#8226; <a href="https://hub.mph.in.gov/dataset/aries-crash-data-2007-2017" style="color:white">Data Source</a></p>
+  <p><a href="index.html" style="color:white"> Home </a> &#8226;<a href="documentation.html" style="color:white">Documentation     </a> &#8226; <a href="https://www.youtube.com/watch?v=lVWLlHieLAk" style="color:white">Video Tutorial </a> &#8226; <a href="https://hub.mph.in.gov/dataset/aries-crash-data-2007-2017" style="color:white">Data Source</a></p>
 </footer>
 
 </body>
