--- a/documentation.html
+++ b/documentation.html
@@ -237,6 +237,9 @@ The distribution made by the days of the week bar chart show that more deadly ve
 <div class="container-fluid text-center">
 <p>Sketch Art</p>
 <img src="sketch.png" alt="Sketch" width="500" height="333">
+<img src="sketch2.jpg" alt="Sketch" width="500" height="333">
+<img src="sketch3.jpg" alt="Sketch" width="500" height="333">
+<img src="sketch4.jpg" alt="Sketch" width="500" height="333">
 </div>
 
 </div>
